feat(powerbi): add viewer, configuration, and routes

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -84,6 +84,10 @@
     "campaigns": "الحملات",
     "reports": "التقارير",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "تقارير Power BI",
+    "powerbiGroups": "مجموعات Power BI",
+    "powerbiUserGroups": "مجموعات مستخدمي Power BI",
+    "powerbiGroupReportMapping": "تعيين مجموعة-تقرير Power BI",
     "titleManagement": "إدارة الألقاب",
     "shippingAddressManagement": "إدارة عناوين الشحن",
     "userManagement": "إدارة المستخدمين",
