--- a/src/locales/de/common.json
+++ b/src/locales/de/common.json
@@ -70,6 +70,10 @@
     "campaigns": "Kampagnen",
     "reports": "Berichte",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "Power BI Berichte",
+    "powerbiGroups": "Power BI Gruppen",
+    "powerbiUserGroups": "Power BI Benutzergruppen",
+    "powerbiGroupReportMapping": "Power BI Gruppen-Bericht-Zuordnung",
     "titleManagement": "Titelverwaltung",
     "shippingAddressManagement": "Lieferadressenverwaltung",
     "userManagement": "Benutzerverwaltung",
