--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -87,6 +87,12 @@
     "reportBuilder": "Report Builder",
     "pdfBuilder": "PDF Builder",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "Power BI Reports",
+    "powerbiGroups": "Power BI Groups",
+    "powerbiUserGroups": "Power BI User Groups",
+    "powerbiGroupReportMapping": "Power BI Group-Report Mapping",
+    "powerbiConfiguration": "Power BI Configuration",
+    "powerbiReportsView": "Power BI Reports (View)",
     "titleManagement": "Title Management",
     "shippingAddressManagement": "Shipping Address Management",
     "userManagement": "User Management",
