--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -70,6 +70,10 @@
     "campaigns": "Campagnes",
     "reports": "Rapports",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "Rapports Power BI",
+    "powerbiGroups": "Groupes Power BI",
+    "powerbiUserGroups": "Groupes utilisateurs Power BI",
+    "powerbiGroupReportMapping": "Mapping Groupe-Rapport Power BI",
     "titleManagement": "Gestion des titres",
     "shippingAddressManagement": "Gestion des adresses de livraison",
     "userManagement": "Gestion des utilisateurs",
