--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -84,6 +84,10 @@
     "campaigns": "Campagne",
     "reports": "Report",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "Report Power BI",
+    "powerbiGroups": "Gruppi Power BI",
+    "powerbiUserGroups": "Gruppi utenti Power BI",
+    "powerbiGroupReportMapping": "Mapping Gruppo-Report Power BI",
     "titleManagement": "Gestione Titoli",
     "shippingAddressManagement": "Gestione Indirizzi di Spedizione",
     "userManagement": "Gestione Utenti",
