--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -81,6 +81,12 @@
     "reportBuilder": "Report Builder",
     "pdfBuilder": "PDF Builder",
     "powerbi": "PowerBI",
+    "powerbiReportDefinitions": "PowerBI Raporları",
+    "powerbiGroups": "PowerBI Grupları",
+    "powerbiUserGroups": "PowerBI Kullanıcı Grupları",
+    "powerbiGroupReportMapping": "PowerBI Grup-Rapor Eşleştirme",
+    "powerbiConfiguration": "PowerBI Konfigürasyon",
+    "powerbiReportsView": "PowerBI Raporları (Görüntüle)",
     "titleManagement": "Ünvan Yönetimi",
     "shippingAddressManagement": "Sevk Adresi Yönetimi",
     "userManagement": "Kullanıcı Yönetimi",
