--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -84,6 +84,10 @@
     "campaigns": "Campañas",
     "reports": "Informes",
     "powerbi": "Power BI",
+    "powerbiReportDefinitions": "Informes Power BI",
+    "powerbiGroups": "Grupos Power BI",
+    "powerbiUserGroups": "Grupos de usuarios Power BI",
+    "powerbiGroupReportMapping": "Asignación Grupo-Informe Power BI",
     "titleManagement": "Gestión de Títulos",
     "shippingAddressManagement": "Gestión de Direcciones de Envío",
     "userManagement": "Gestión de Usuarios",
