feat(powerbi-sync): PowerBI rapor senkronizasyonu özelliği
- powerbi-sync feature: api, types, hook, PowerbiReportSyncCard, PowerbiReportSyncPage
- POST /api/powerbi/reports/sync (opsiyonel workspaceId), success/error toast
- Rapor listesi sayfası üstüne sync kartı, /powerbi/sync route ve sayfa
- Sidebar: PowerBI Senkronizasyon menüsü
- powerbiSync ve sidebar.powerbiSync i18n anahtarları (tr, en, ar, de, es, fr, it)

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -63,6 +63,20 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiSync": {
+    "title": "مزامنة تقارير Power BI",
+    "description": "جلب التقارير من مساحة العمل ومزامنتها مع قاعدة بيانات CRM.",
+    "workspaceId": "معرف مساحة العمل",
+    "workspaceIdPlaceholder": "معرف مساحة العمل (اختياري)",
+    "sync": "مزامنة",
+    "success": "تمت المزامنة بنجاح",
+    "error": "فشلت المزامنة",
+    "totalRemote": "المجموع البعيد",
+    "created": "تم الإنشاء",
+    "updated": "تم التحديث",
+    "reactivated": "إعادة التفعيل",
+    "deleted": "تم الحذف"
+  },
   "sidebar": {
     "dashboard": "لوحة التحكم",
     "search": "بحث...",
@@ -85,6 +99,7 @@
     "reports": "التقارير",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "تقارير Power BI",
+    "powerbiSync": "مزامنة Power BI",
     "powerbiGroups": "مجموعات Power BI",
     "powerbiUserGroups": "مجموعات مستخدمي Power BI",
     "powerbiGroupReportMapping": "تعيين مجموعة-تقرير Power BI",
