feat(powerbi-rls): PowerBI RLS rol eşleştirme yönetimi
- powerbi-rls feature: api (report-role-mappings + UserAuthority), types, hooks
- PowerbiRlsPage, PowerbiRlsForm, PowerbiRlsList (CRUD, rapor/rol dropdown, RLS roller)
- Route /powerbi/rls, sidebar RLS Yönetimi
- powerbiRls ve sidebar.powerbiRls i18n (tr, en, ar, de, es, fr, it)

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -63,6 +63,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "إدارة RLS لـ Power BI",
+    "description": "ربط التقرير بدور المستخدم وتحديد أدوار RLS.",
+    "new": "تعيين جديد",
+    "report": "التقرير",
+    "role": "الدور",
+    "rlsRoles": "أدوار RLS",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "أنشأه",
+    "updatedBy": "حدّثه",
+    "actions": "إجراءات",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "confirmDelete": "هل أنت متأكد من حذف هذا التعيين؟",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "successCreate": "تم إنشاء التعيين",
+    "successUpdate": "تم تحديث التعيين",
+    "successDelete": "تم حذف التعيين",
+    "error": "فشلت العملية"
+  },
   "powerbiSync": {
     "title": "مزامنة تقارير Power BI",
     "description": "جلب التقارير من مساحة العمل ومزامنتها مع قاعدة بيانات CRM.",
@@ -99,6 +120,7 @@
     "reports": "التقارير",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "تقارير Power BI",
+    "powerbiRls": "إدارة RLS",
     "powerbiSync": "مزامنة Power BI",
     "powerbiGroups": "مجموعات Power BI",
     "powerbiUserGroups": "مجموعات مستخدمي Power BI",
