--- a/src/locales/de/common.json
+++ b/src/locales/de/common.json
@@ -54,6 +54,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "Power BI RLS-Verwaltung",
+    "description": "Bericht + Benutzerrolle zuordnen und RLS-Rollen definieren.",
+    "new": "Neue Zuordnung",
+    "report": "Bericht",
+    "role": "Rolle",
+    "rlsRoles": "RLS-Rollen",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Erstellt von",
+    "updatedBy": "Aktualisiert von",
+    "actions": "Aktionen",
+    "edit": "Bearbeiten",
+    "delete": "Löschen",
+    "confirmDelete": "Möchten Sie diese Zuordnung wirklich löschen?",
+    "save": "Speichern",
+    "cancel": "Abbrechen",
+    "successCreate": "Zuordnung erstellt",
+    "successUpdate": "Zuordnung aktualisiert",
+    "successDelete": "Zuordnung gelöscht",
+    "error": "Vorgang fehlgeschlagen"
+  },
   "powerbiSync": {
     "title": "Power BI Berichtssynchronisation",
     "description": "Lädt Berichte aus dem Workspace und synchronisiert sie mit der CRM-Datenbank.",
@@ -85,6 +106,7 @@
     "reports": "Berichte",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "Power BI Berichte",
+    "powerbiRls": "RLS-Verwaltung",
     "powerbiSync": "Power BI Synchronisation",
     "powerbiGroups": "Power BI Gruppen",
     "powerbiUserGroups": "Power BI Benutzergruppen",
