--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -64,6 +64,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "Power BI RLS Management",
+    "description": "Map report + user role and define RLS roles.",
+    "new": "New Mapping",
+    "report": "Report",
+    "role": "Role",
+    "rlsRoles": "RLS Roles",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Created By",
+    "updatedBy": "Updated By",
+    "actions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "confirmDelete": "Are you sure you want to delete this mapping?",
+    "save": "Save",
+    "cancel": "Cancel",
+    "successCreate": "Mapping created",
+    "successUpdate": "Mapping updated",
+    "successDelete": "Mapping deleted",
+    "error": "Operation failed"
+  },
   "powerbiSync": {
     "title": "Power BI Report Sync",
     "description": "Fetches reports from workspace and syncs to CRM database.",
@@ -107,6 +128,7 @@
     "powerbiGroupReportMapping": "Power BI Group-Report Mapping",
     "powerbiConfiguration": "Power BI Configuration",
     "powerbiReportsView": "Power BI Reports (View)",
+    "powerbiRls": "RLS Management",
     "powerbiSync": "Power BI Sync",
     "titleManagement": "Title Management",
     "shippingAddressManagement": "Shipping Address Management",
