--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -63,6 +63,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "Gestión RLS de Power BI",
+    "description": "Asigne informe + rol de usuario y defina roles RLS.",
+    "new": "Nueva asignación",
+    "report": "Informe",
+    "role": "Rol",
+    "rlsRoles": "Roles RLS",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Creado por",
+    "updatedBy": "Actualizado por",
+    "actions": "Acciones",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "confirmDelete": "¿Está seguro de que desea eliminar esta asignación?",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "successCreate": "Asignación creada",
+    "successUpdate": "Asignación actualizada",
+    "successDelete": "Asignación eliminada",
+    "error": "Operación fallida"
+  },
   "powerbiSync": {
     "title": "Sincronización de informes Power BI",
     "description": "Obtiene informes del workspace y los sincroniza con la base de datos CRM.",
@@ -99,6 +120,7 @@
     "reports": "Informes",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "Informes Power BI",
+    "powerbiRls": "Gestión RLS",
     "powerbiSync": "Sincronización Power BI",
     "powerbiGroups": "Grupos Power BI",
     "powerbiUserGroups": "Grupos de usuarios Power BI",
