--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -54,6 +54,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "Gestion RLS Power BI",
+    "description": "Associer rapport + rôle utilisateur et définir les rôles RLS.",
+    "new": "Nouvelle association",
+    "report": "Rapport",
+    "role": "Rôle",
+    "rlsRoles": "Rôles RLS",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Créé par",
+    "updatedBy": "Mis à jour par",
+    "actions": "Actions",
+    "edit": "Modifier",
+    "delete": "Supprimer",
+    "confirmDelete": "Voulez-vous vraiment supprimer cette association ?",
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "successCreate": "Association créée",
+    "successUpdate": "Association mise à jour",
+    "successDelete": "Association supprimée",
+    "error": "Opération échouée"
+  },
   "powerbiSync": {
     "title": "Synchronisation des rapports Power BI",
     "description": "Récupère les rapports du workspace et les synchronise avec la base CRM.",
@@ -85,6 +106,7 @@
     "reports": "Rapports",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "Rapports Power BI",
+    "powerbiRls": "Gestion RLS",
     "powerbiSync": "Synchronisation Power BI",
     "powerbiGroups": "Groupes Power BI",
     "powerbiUserGroups": "Groupes utilisateurs Power BI",
