--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -58,6 +58,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "V3RII CRM"
   },
+  "powerbiRls": {
+    "title": "PowerBI RLS Yönetimi",
+    "description": "Rapor + kullanıcı rolü eşleştirip RLS rolleri tanımlayın.",
+    "new": "Yeni Eşleştirme",
+    "report": "Rapor",
+    "role": "Rol",
+    "rlsRoles": "RLS Rolleri",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Oluşturan",
+    "updatedBy": "Güncelleyen",
+    "actions": "İşlemler",
+    "edit": "Düzenle",
+    "delete": "Sil",
+    "confirmDelete": "Bu eşleştirmeyi silmek istediğinize emin misiniz?",
+    "save": "Kaydet",
+    "cancel": "İptal",
+    "successCreate": "Eşleştirme oluşturuldu",
+    "successUpdate": "Eşleştirme güncellendi",
+    "successDelete": "Eşleştirme silindi",
+    "error": "İşlem başarısız"
+  },
   "powerbiSync": {
     "title": "PowerBI Rapor Senkronizasyonu",
     "description": "Workspace'ten raporları çekip CRM veritabanına işler.",
@@ -101,6 +122,7 @@
     "powerbiGroupReportMapping": "PowerBI Grup-Rapor Eşleştirme",
     "powerbiConfiguration": "PowerBI Konfigürasyon",
     "powerbiReportsView": "PowerBI Raporları (Görüntüle)",
+    "powerbiRls": "RLS Yönetimi",
     "powerbiSync": "PowerBI Senkronizasyon",
     "titleManagement": "Ünvan Yönetimi",
     "shippingAddressManagement": "Sevk Adresi Yönetimi",
