--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -63,6 +63,27 @@
     "VERII WMS": "VERII WMS",
     "crm": "CRM"
   },
+  "powerbiRls": {
+    "title": "Gestione RLS Power BI",
+    "description": "Associa report + ruolo utente e definisci i ruoli RLS.",
+    "new": "Nuova associazione",
+    "report": "Report",
+    "role": "Ruolo",
+    "rlsRoles": "Ruoli RLS",
+    "rlsRolesPlaceholder": "Sales, Finance, NorthRegion",
+    "createdBy": "Creato da",
+    "updatedBy": "Aggiornato da",
+    "actions": "Azioni",
+    "edit": "Modifica",
+    "delete": "Elimina",
+    "confirmDelete": "Sei sicuro di voler eliminare questa associazione?",
+    "save": "Salva",
+    "cancel": "Annulla",
+    "successCreate": "Associazione creata",
+    "successUpdate": "Associazione aggiornata",
+    "successDelete": "Associazione eliminata",
+    "error": "Operazione fallita"
+  },
   "powerbiSync": {
     "title": "Sincronizzazione report Power BI",
     "description": "Recupera i report dal workspace e li sincronizza con il database CRM.",
@@ -99,6 +120,7 @@
     "reports": "Report",
     "powerbi": "Power BI",
     "powerbiReportDefinitions": "Report Power BI",
+    "powerbiRls": "Gestione RLS",
     "powerbiSync": "Sincronizzazione Power BI",
     "powerbiGroups": "Gruppi Power BI",
     "powerbiUserGroups": "Gruppi utenti Power BI",
