fix(i18n): login sayfasında dil değişimi ve eksik çeviriler
- I18nextProvider ile tüm uygulama aynı i18n context kullanıyor (login re-render)
- LanguageSwitcher: önce loadLanguage sonra changeLanguage, localStorage kayıt
- loadLanguage export edildi; dil yüklenirken Select disabled
- Login: auth.login eksik anahtarlar (branchPlaceholder, rememberMe, slogan vb.) tüm dillere eklendi
- Login: capsLockOn, animationOff/On t() ile; sabit metin kaldırıldı

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -55,7 +55,10 @@
       "forgotPassword": "نسيت كلمة المرور؟",
       "processing": "جاري المعالجة...",
       "submitButton": "تسجيل الدخول",
-      "slogan": "قم بتمكين عملك مع <1>VERII CRM</1>"
+      "slogan": "قم بتمكين عملك مع <1>VERII CRM</1>",
+      "capsLockOn": "مفتاح Caps Lock مفعّل",
+      "animationOff": "إيقاف الحركة",
+      "animationOn": "تشغيل الحركة"
     },
     "logout": "تسجيل الخروج"
   },
