--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -41,16 +41,25 @@
       "branch": "Şube",
       "selectBranch": "Şube seçiniz",
       "branchNotFound": "Şube bulunamadı",
+      "branchPlaceholder": "Şube Seçiniz",
       "email": "E-posta",
       "emailPlaceholder": "E-posta adresinizi giriniz",
       "password": "Şifre",
       "passwordPlaceholder": "••••••••",
       "loginButton": "Giriş Yap",
+      "submitButton": "Giriş Yap",
       "loggingIn": "Giriş yapılıyor...",
+      "processing": "Giriş yapılıyor...",
+      "rememberMe": "Beni Hatırla",
+      "forgotPassword": "Şifremi Unuttum?",
       "wrongPassword": "E-posta veya şifre yanlış",
       "loginError": "Giriş yapılırken bir hata oluştu",
       "sessionExpired": "Oturum süreniz doldu. Lütfen tekrar giriş yapın.",
-      "copyright": "© 2025 VERII. Tüm hakları saklıdır."
+      "copyright": "© 2025 VERII. Tüm hakları saklıdır.",
+      "slogan": "İşinizi tahminlerle değil, <1>VERII CRM</1> ile yönetin.",
+      "capsLockOn": "Büyük harf kilidi açık",
+      "animationOff": "Animasyonu Kapat",
+      "animationOn": "Animasyonu Aç"
     },
     "logout": "Çıkış"
   },
