feat(quotation): enhance customer selection with autocomplete and view modes  Customer Autocomplete (QuotationHeaderForm): - Converted read-only customer input to a writable combobox with real-time filtering. - Implemented independent input focus handling for better UX. - Redesigned dropdown with Glassmorphism styles (backdrop-blur, shadows, rounded corners). - Added modern "No Results" state with SearchX icon. - Enhanced list items with hover effects and colored ERP/CRM badges. - Fixed input visibility issues (text color, z-index) and icon interaction. - Fixed TypeScript type safety issues in customer selection logic.  Customer Guide Modal (CustomerSelectDialog): - Added List/Card view mode toggle (defaulting to List view). - Implemented compact list layout for better information density. - Standardized modal UI to match ProductSelectDialog (Glassmorphism headers, tabs).  General: - Removed unused imports in quotation forms. - Verified successful build.

--- a/src/locales/tr/quotation.json
+++ b/src/locales/tr/quotation.json
@@ -11,6 +11,7 @@
   "back": "Geri",
   "refresh": "Yenile",
   "select": "Seç",
+  "guide": "Rehber",
   "yes": "Evet",
   "add": "Ekle",
   "backToQuotations": "Tekliflere Dön",
