--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -32,7 +32,12 @@
     "actions": "İşlemler",
     "processing": "İşleniyor...",
     "selectDate": "Tarih seçin",
-    "UnexpectedError": "Beklenmeyen bir hata oluştu"
+    "UnexpectedError": "Beklenmeyen bir hata oluştu",
+    "forbiddenTitle": "Erisim engellendi",
+    "forbiddenDescription": "Bu sayfayi goruntuleme yetkiniz yok.",
+    "forbiddenFrom": "Istenen yol",
+    "goBack": "Geri don",
+    "goHome": "Anasayfaya git"
   },
   "auth": {
     "login": {
@@ -532,7 +537,6 @@
       "isPlanned": "Planlı",
       "priorityLevel": "Öncelik Seviyesi",
       "statusInfo": "Durum Bilgileri",
-      "status": "Durum",
       "isCompleted": "Tamamlandı",
       "completionDate": "Tamamlanma Tarihi",
       "isPendingApproval": "Onay Bekliyor",
@@ -1287,7 +1291,6 @@
       "yapKod": "Yap Kodu",
       "quantity": "Miktar",
       "serialNo": "Seri No",
-      "barcode": "Barkod",
       "actions": "İşlemler",
       "noLines": "Satır bulunamadı",
       "notFound": "Paket bulunamadı",
@@ -1301,58 +1304,9 @@
       "lineAddError": "Satır eklenirken bir hata oluştu"
     },
     "form": {
-      "packingNo": "Paketleme No",
-      "sourceType": "Kaynak Tipi",
-      "selectSourceType": "Kaynak Tipi Seçin",
-      "noSourceType": "Kaynak tipi bulunamadı",
-      "sourceHeaderId": "Eşlenecek Header",
-      "selectSourceHeader": "Eşlenecek Header Seçin",
-      "noAvailableHeaders": "Eşlenecek header bulunamadı",
-      "selectSourceTypeFirst": "Önce kaynak tipi seçiniz",
-      "packingNoRequired": "Paketleme No zorunludur",
-      "packingDate": "Paketleme Tarihi",
-      "warehouseCode": "Depo Kodu",
-      "sourceType": "Kaynak Tipi",
-      "selectSourceType": "Kaynak Tipi Seçin",
-      "sourceHeaderId": "Eşlenecek Header",
-      "selectSourceHeader": "Eşlenecek Header Seçin",
-      "noAvailableHeaders": "Eşlenecek header bulunamadı",
-      "selectSourceTypeFirst": "Önce kaynak tipi seçiniz",
-      "noSourceType": "Kaynak tipi bulunamadı",
-      "customerCode": "Cari Kodu",
-      "customerAddress": "Cari Adresi",
-      "status": "Durum",
-      "carrierId": "Kargo Firması ID",
-      "carrierServiceType": "Kargo Servis Tipi",
-      "trackingNo": "Takip No",
-      "packageNo": "Paket No",
-      "packageNoRequired": "Paket No zorunludur",
-      "packageType": "Paket Tipi",
-      "package": "Paket",
-      "selectPackage": "Paket Seçin",
-      "packingHeaderId": "Paketleme Başlık ID",
-      "packingHeaderIdRequired": "Paketleme Başlık ID zorunludur",
-      "packageIdRequired": "Paket ID zorunludur",
-      "barcode": "Barkod",
-      "length": "Uzunluk",
-      "width": "Genişlik",
-      "height": "Yükseklik",
-      "volume": "Hacim",
-      "netWeight": "Net Ağırlık",
-      "tareWeight": "Dara Ağırlık",
-      "grossWeight": "Brüt Ağırlık",
-      "isMixed": "Karışık",
-      "stockCode": "Stok Kodu",
-      "stockCodeRequired": "Stok Kodu zorunludur",
-      "yapKod": "Yap Kodu",
-      "yapKodRequired": "Yap Kodu zorunludur",
-      "quantity": "Miktar",
-      "quantityRequired": "Miktar zorunludur",
-      "serialNo": "Seri No",
-      "serialNo2": "Seri No 2",
-      "serialNo3": "Seri No 3",
-      "serialNo4": "Seri No 4",
-      "sourceRouteId": "Kaynak Rota ID"
+      "selectWarehouse": "Depo seçiniz",
+      "selectCustomer": "Cari seçiniz",
+      "selectCarrier": "Kargo Firması Seçin"
     },
     "status": {
       "draft": "Taslak",
@@ -1412,11 +1366,6 @@
       "Scotty": "Scotty",
       "KolayGelsin": "Kolay Gelsin",
       "BirGundeKargo": "Bir Günde Kargo"
-    },
-    "form": {
-      "selectWarehouse": "Depo seçiniz",
-      "selectCustomer": "Cari seçiniz",
-      "selectCarrier": "Kargo Firması Seçin"
     }
   },
   "notification": {
