--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -32,7 +32,12 @@
     "actions": "Azioni",
     "processing": "Elaborazione...",
     "selectDate": "Seleziona data",
-    "UnexpectedError": "An unexpected error occurred"
+    "UnexpectedError": "An unexpected error occurred",
+    "forbiddenTitle": "Accesso negato",
+    "forbiddenDescription": "Non hai i permessi per visualizzare questa pagina.",
+    "forbiddenFrom": "Percorso richiesto",
+    "goBack": "Indietro",
+    "goHome": "Home"
   },
   "auth": {
     "login": {
